# PS5ZST

./: .gitignore  Create-ExfatImage.bat  Create-ExfatImage.ps1  GENERATE_EXFAT_GUIDE.md  New-OsfExfatImage.ps1  OSFMOUNT_QUICKSTART.md  README.md  RunGame.bat  ZSTDecompressionPS5 copy.elf  compress_exfat.py  compress_image.py  compress_test.py  decompress_ps5.c  decompress_ps5_ps5.elf  make_image.bat  make_image_and_compress.bat  run-generator.ps1  zstd_bundle.c
investigation/: FIX_SUMMARY.md  README.md  analyze_boot_sectors.py  analyze_root_dir.py  boot_compare.py  check_all_hashes.py  check_bitmap_corruption.py  check_bitmap_param.py  check_checksums.py  check_data_lengths.py  check_dentries.py  check_fat.py  check_fat_entry.py  check_fat_integrity.py  check_fat_nofatchain.py  check_fat_structure.py  check_fat_values.py  check_first_cluster.py  check_first_file.py  check_fixed_fat.py  check_match.py  check_param.py  check_root_dir_integrity.py  check_rootdir.py  check_sce_sys.py  check_stream.py  check_stream_flags.py  check_subdir_flags.py  check_upcase_size.py  compare_images.py  compare_param_entries.py  compare_param_json.py  compare_sizes.py  comprehensive_compare.py  compress_exfat_pkg.py  compress_pkg.py  create_osfmount_image.py  debug_checksum.py  debug_geometry.py  debug_param_json.py  (+38 more)
lz4_workflow/: CMakeLists.txt  LZ4DecompressionPS5.c  QUICKSTART.md  README.md  build.bat  build.sh  compress_lz4.py  run-generator-lz4.ps1
scripts/: README_GITHUB_SNIPPETS.md  build_decompress_elf_wsl.sh  pack_zst_manifest_wsl.sh
(+2 files in other folders)
